hiding signup-2 to avoid page flicker

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -101,11 +101,17 @@ label, .subheading
 #signup-container{
 	width 460px
 	margin 100px auto
-	.dropdown{
-		width 280px
+	#signup-page-2{
+		display hidden
 	}
 	.well{
 		padding-bottom 5px
+	}
+	.dropdown{
+		width 280px
+	}
+	.two-line{
+		margin-top -9px
 	}
 	.form-horizontal .controls{
 		margin-left 100px
@@ -116,9 +122,6 @@ label, .subheading
 	.form-horizontal .form-actions{
 		margin 0	
 		padding-left 255px
-	}
-	.two-line{
-		margin-top -9px
 	}
 }
 
